--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -41,7 +41,7 @@
 #mainMenu {
     margin-top: -20px;
     padding-top: 5px;
-    padding-left: 660px;
+    padding-left: 740px;
     padding-bottom: 20px;
 }
 
@@ -98,6 +98,13 @@
 
 #adminInnerRPane{
     padding-left: 48px;
+    padding-bottom: 15px;
+}
+
+#adminInnerRPane2 {
+    float: right;
+    padding-top: 2px;
+    padding-right: 45px;
     padding-bottom: 15px;
 }
 
