--- a/5051/Views/Admin/Manage.cshtml
+++ b/5051/Views/Admin/Manage.cshtml
@@ -16,7 +16,7 @@ ViewBag.Title = "Reports";
             </div>
             <div id="mainMenu" class="col-md-9 pull-right">
                 @Html.ActionLink("Main Menu", "Index", "Admin", null, new { @class = "btn btn-primary" })
-                <div class="btn btn-danger" role="button" onclick="Print()">Print</div>
+                
             </div>
         </div>
 
@@ -32,19 +32,7 @@ ViewBag.Title = "Reports";
                 }
                 else
                 {
-
-                    <script>
-                        function Print() {
-                            var fullPath = document.getElementById("report").src;
-                            var reportFile = fullPath.replace(/^.*[\\\/]/, '');
-                            if (reportFile == "blankReport.png") {
-                                window.location.href = '@Url.Action("PrintReport", "Admin")';
-                            } else {
-                                window.location.href = '@Url.Action("PrintReport", "Admin",new { id = "", isEmpty = "no" })';
-                            }
-
-                        }
-                    </script>
+                    
                     <!--script to switch between report and edit attendance table-->
                     <script type="text/javascript">
                     function changeImage(cmd) {
@@ -101,14 +89,33 @@ ViewBag.Title = "Reports";
                 
             </script>
 
-      
+                    //Support print button
+                    <script type="text/javascript">
+                        function Print() {
+                            var fullPath = document.getElementById("report").src;
+                            var reportFile = fullPath.replace(/^.*[\\\/]/, '');
+                            if ('@Model.StudentList.Count' > 0) {
+                                 if (reportFile == "blankReport.png") {
+                                    window.location.href = '@Url.Action("PrintReport", "Admin")';
+                                } else {
+                                    window.location.href = '@Url.Action("PrintReport", "Admin",new { id = "", isEmpty = "no" })';
+                                 }
+                            } else {
 
-            <div id="adminLPane" class="col-md-4 hoverGlow">
+                                printOne();
+
+                            }
+
+                        }
+                    </script>
+
+                <div id="adminLPane" class="col-md-4 hoverGlow">
 
                 @{
                             if (Model.Student != null)
                             //For invidiual student
                             {
+
                                 var item = Model.Student;
                         <div class="col-md-12" align="center">
                             <img src="~/Content/img/@item.AvatarUri" width="150" height="150" />
@@ -280,29 +287,37 @@ ViewBag.Title = "Reports";
             </div>
 
 
-            <div id="adminRPane" class="col-md-7 hoverGlow">
-                <div class="row">
-                    <!--Menu bar above the report-->
-                    <div id="adminInnerRPane">
-                        <label for="frDate">From date:</label>
-                        <input type="date" id="frInput" name="frInput">
-                        <label for="toDate">To date:</label>
-                        <input type="date" id="toInput" name="toInput">
-                        <a href="#" class="btn btn-success" role="button"
-                           onclick="changeImage('report')">Run</a>
-                        <a href="#" class="btn btn-primary" role="button" onclick="changeImage('edit')">
-                            Table View
-                        </a>
-                    </div>
+                <div id="adminRPane" class="col-md-7 hoverGlow">
+                    <div class="row">
+                   
 
-                    <div id="reportPane">
-                        @if (Model.Student == null)
-                                {
-                                <img id="report" src="~/Content/img/Admin Reports/blankReport.png" width="600" height="300">
-                                }
-                                else
-                                {
-                                                <!--Script to move between individual reports-->
+                        <div id="reportPane">
+                            @if (Model.Student == null)
+                            {
+                                    //Menu bar above the report
+                                    <div id="adminInnerRPane">
+                                        <label for="frDate">From date:</label>
+                                        <input type="date" id="frInput" name="frInput">
+                                        <label for="toDate">To date:</label>
+                                        <input type="date" id="toInput" name="toInput">
+                                        <a href="#" class="btn btn-success" role="button"
+                                           onclick="changeImage('report')">Run</a>
+                                        <div class="btn btn-danger" role="button" onclick="Print()">Print</div>
+                                    </div>
+                                    <img id="report" src="~/Content/img/Admin Reports/blankReport.png" width="600" height="300">
+                            }
+                            else
+                            {
+                                //Support print button
+                                <script type="text/javascript">
+
+                                    function PrintOne() {
+                                            var SID = '@Model.Student.Id';
+                                            window.location.href = '@Url.Action("PrintReport", "Admin")/' + SID;
+                                    }
+                                </script>
+
+                                <!--Script to move between individual reports-->
                                 <script type="text/javascript">
                                                         function changeReport(id) {
                                                             var counter = document.getElementById("counter").innerHTML;
@@ -313,42 +328,61 @@ ViewBag.Title = "Reports";
                                                             } else {
                                                                 counter++;
                                                             }
-                                                         } else {
+                                                            } else {
                                                             if (counter <= 1) {
                                                             counter = 1;
                                                             } else {
                                                             counter--;
                                                             }
                                                         }
-                                                         var img = document.getElementById("report");
-                                                         var newimg = '@Model.Student.ReportsId[0]';
-                                                         newimg = newimg.replace("_1", "_" + counter);
-                                                         img.src = "@Url.Content("~/Content/img/Admin Reports/")" + newimg;
-                                                         document.getElementById("counter").innerHTML = counter;
+                                                            var img = document.getElementById("report");
+                                                            var newimg = '@Model.Student.ReportsId[0]';
+                                                            newimg = newimg.replace("_1", "_" + counter);
+                                                            img.src = "@Url.Content("~/Content/img/Admin Reports/")" + newimg;
+                                                            document.getElementById("counter").innerHTML = counter;
 
                                                 }
                                 </script>
 
-                                    var reportSource = Model.Student.ReportsId[0];
-                                <img id="report" src="~/Content/img/Admin Reports/@reportSource" width="600" height="300">
-                                <br />
-                                <div id="adminReportBttn">
-                                    <img id="back" src="~/Content/img/Admin Reports/backIcon.png" onclick="changeReport(this.id)"
-                                         width="50" height="50">
-                                    <img id="next" src="~/Content/img/Admin Reports/nextIcon.png" onclick="changeReport(this.id)"
-                                         width="50" height="50">
-                                    <a id="counter" visibility: hidden>1</a>
+                                //Menu bar above the report
+                                <div >
+                                    <label for="frDate">From date:</label>
+                                    <input type="date" id="frInput" name="frInput">
+                                    <label for="toDate">To date:</label>
+                                    <input type="date" id="toInput" name="toInput">
+                                    <a href="#" class="btn btn-success" role="button"
+                                       onclick="changeImage('report')">Run</a>
+                                    <a href="#" class="btn btn-primary" role="button" onclick="changeImage('edit')">
+                                        Table View
+                                    </a>
+                                    
+                                </div>
+                                <div id="adminInnerRPane2">
+                                    <div class="btn btn-danger" role="button" onclick="PrintOne()">Print</div>
                                 </div>
 
+                                var reportSource = Model.Student.ReportsId[0];
+                                    <img id="report" src="~/Content/img/Admin Reports/@reportSource" width="600" height="300">
+                                    <br />
+                                    <div id="adminReportBttn">
+                                        <img id="back" src="~/Content/img/Admin Reports/backIcon.png" onclick="changeReport(this.id)"
+                                             width="50" height="50">
+                                        <img id="next" src="~/Content/img/Admin Reports/nextIcon.png" onclick="changeReport(this.id)"
+                                             width="50" height="50">
+                                        <a id="counter" visibility: hidden>1</a>
+                                    </div>
 
-                                }
 
+                                    }
+
+                        </div>
                     </div>
                 </div>
-            </div>
 
 
-                            }
+                    
+
+                 }
             }
         </div>
     </div>
