--- a/5051/Views/Admin/PrintReport.cshtml
+++ b/5051/Views/Admin/PrintReport.cshtml
@@ -38,21 +38,92 @@
             <div class="row">
                 <div class="col-md-12">
                      @{
-                         
+
                          if (TempData["ck"] != null)
                          {
                                 <img src="~/Content/img/Admin Reports/totalAttendance.png" width="600" height="300">
                          }
                          else
                          {
-                             
+
                                 <img src="~/Content/img/Admin Reports/blankReport.png" width="600" height="300">
-                            }
+                         }
                     }
                 </div>
             </div>
+          }
+         else
+         {
+            <div class="row">
+                @{
+                    var item = Model.Student;
+                    <div class="col-xs-12">
+                        <div class="col-xs-4 minH">
+                            <img src="~/Content/img/@item.AvatarUri" width="150" height="150" />
+                        </div>
+                        <div class="col-xs-8 minH">
+                            <div class="row">
+                                <div class="col-xs-5 text-left">
+                                    @Html.DisplayNameFor(i => item.Name)
+                                </div>
+                                <div class="col-xs-7 text-left">
+                                    @Html.DisplayFor(i => item.Name)
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-xs-5 text-left">
+                                    @Html.DisplayNameFor(i => item.AvatarName)
+                                </div>
+                                <div class="col-xs-7 text-left">
+                                    @Html.DisplayFor(i => item.AvatarName)
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div id="fitTitleText" class="col-xs-6 text-left">
+                                    @Html.DisplayNameFor(i => item.AvatarDescription)
+                                </div>
+                                <div id="fitInfoText" class="col-xs-6">
+                                    @Html.DisplayFor(i => item.AvatarDescription)
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-xs-5 text-left">
+                                    @Html.DisplayNameFor(i => item.AvatarLevel)
+                                </div>
+                                <div class="col-xs-7 text-left">
+                                    @Html.DisplayFor(i => item.AvatarLevel)
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-xs-5 text-left">
+                                    @Html.DisplayNameFor(i => item.Status)
+                                </div>
+                                <div class="col-xs-7 text-left">
+                                    @Html.DisplayFor(i => item.Status)
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12">
+                        @foreach (var report in Model.Student.ReportsId)
+                        {
+                            <div class="col-xs-6 text-center">
+                                <img src="~/Content/img/Admin Reports/@report" width="600" height="300">
+                                <br />
+                            </div>
+                        }
+                    </div>
+
+                }
+
+            </div>
+
          }
-     }
+      }
 
 </body>
 
